--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
 
 <a href="./Loopy.html#8x8t0dh">Loopy.html#8x8t0dh</a> <br />
 <a href="./Loopy.html#8x8t0dn">Loopy.html#8x8t0dn</a> <br />
+<a href="./Loopy.html#9x9t0dh">Loopy.html#9x9t0dh</a> <br />
+<a href="./Loopy.html#9x9t0dn">Loopy.html#9x9t0dn</a> <br />
+<a href="./Loopy.html#10x10t0dh">Loopy.html#10x10t0dh</a> <br />
+<a href="./Loopy.html#10x10t0dn">Loopy.html#10x10t0dn</a> <br />
+
 <a href="./Solo.html#3x3di">Solo.html#3x3di</a> <br />
 <a href="./Solo.html#3x3da">Solo.html#3x3da</a> <br />
+
 <a href="./Tents.html#8x8de">Tents.html#8x8de</a> <br />
 <a href="./Tents.html#8x8dh">Tents.html#8x8dh</a> <br />
+
 <a href="./Tracks.html#10x10de">Tracks.html#10x10de</a> <br />
 <a href="./Tracks.html#10x10dt">Tracks.html#10x10dt</a> <br />
