--- a/puzzles/random.html
+++ b/puzzles/random.html
@@ -36,7 +36,7 @@
         }
 
         html, body {
-            width: 5.3cm;
+            width: 100%;
             margin: 0; 
             height:100%;
         }
